--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,12 @@
-
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-    padding: 0;
-    border: 0;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  
+  padding: 0;
+  border: 0;
 }
