--- a/src/styles/elements/elements.scss
+++ b/src/styles/elements/elements.scss
@@ -1,12 +1,13 @@
 .centerDiv{
+    position: relative;
     font-size: 1rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     width: 14rem;
     border: solid thin;
     border-radius: 50px;
     margin-bottom: 1rem;
+    background-color: rgb(182, 212, 182);
     
 }
 .centerDiv h2{
@@ -14,3 +15,7 @@
     cursor: pointer;
 }
 
+.cardDiv{
+    width: 5rem;
+    height: 5rem;
+}
