--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -1,5 +1,21 @@
-.containerHome{
-    height: 100vh;
-    width: 100%;
-    background-color: rgb(209, 144, 144);
+.containerHome {
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(173, 209, 144);
+  display: flex;
+  flex-direction: row;
+}
+
+.containerAside {
+  width: 80%;
+  height: 100vh;
+
+}
+
+.centerAside {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5rem;
+  overflow-x: "scroll";
+
 }
