--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 *,
 *::before,
 *::after {
@@ -5,6 +8,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   padding: 0;
